<resources>
    <string name="app_name">Book Application</string>
    <string name="main_menu_toolbar">Book Search</string>
    <string name="group_names">Chloe Lee-Hone</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_bookshelf">Bookshelf</string>
    <string name="user_instructions">Enter a book title:</string>
    <string name="search_button">Find book</string>
    <string name="user_instructions_hint">Title, author, genre&#8230;</string>
    <string name="saved_user_book">User book</string>
    <string name="book_button">Cocktail Application</string>
    <string name="book_search_result">Results</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="help_menu_button">Help</string>
    <string name="help_menu_message">Enter the name of a book you would like to add to your bookshelf, then press the \"Find book\" button.</string>
    <string name="help_menu_title">How to use this application</string>
    <string name="alert_message_button">I understand</string>
    <string name="list_alert_title">Save this book</string>
    <string name="list_alert_selected_row">Would you like to save this book to your bookshelf?</string>
    <string name="list_prompt_yes">Yes</string>
    <string name="list_prompt_no">No</string>
    <string name="load_database_button">My bookshelf</string>
    <string name="add_db_button">Add to favourites</string>
    <string name="toast_db_added">was added to your favourites</string>
    <string name="toast_db_removed">was removed from your favourites</string>
    <string name="search_toast">Please enter one or more search terms</string>
    <string name="list_alert_delete_title">Delete from bookshelf</string>
    <string name="list_alert_delete_message">Would you like to delete this book from your bookshelf?</string>
    <string name="fragment_book_title">Book title:</string>
    <string name="fragment_book_author">Author:</string>
    <string name="fragment_book_year">Year:</string>
    <string name="fragment_book_description">Description:</string>
    <string name="fragment_book_pages">pages</string>
    <string name="menu_search">Search</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_bookshelf">Bookshelf</string>
    <string name="menu_add">Add Book</string>
    <string name="details_fragment_toast_1">This version of \'</string>
    <string name="details_fragment_toast_2">\' is already in your bookshelf.</string>
    <string name="add_title">Title</string>
    <string name="add_author">Author</string>
    <string name="add_year">Year</string>
    <string name="add_description">Description</string>
    <string name="add_button">Add Book</string>
    <string name="add_genre">Genre</string>
    <string name="add_isbn">ISBN 10</string>
    <string name="add_page_count">Page Count</string>
    <string name="add_book_button">Add Book</string>
    <string name="ocr_scan_button">Scan Book</string>
    <string name="bookshelf_search">Title, author, year...</string>
</resources>