<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <AutoCompleteTextView
        android:id="@+id/add_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_title"/>

    <EditText
        android:id="@+id/add_author"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_author"/>

    <EditText
        android:id="@+id/add_year"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_year"/>

    <EditText
        android:id="@+id/add_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"/>

    <EditText
        android:id="@+id/add_genre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_genre"/>

    <EditText
        android:id="@+id/add_isbn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_isbn"/>

    <EditText
        android:id="@+id/add_page_count"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_page_count"/>

    <RatingBar
        android:id="@+id/add_user_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/display_book_description_bookshelf"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:text="UPLOAD IMAGE"
        android:clickable="true"/>

    <Button
        android:id="@+id/add_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:layout_marginTop="30dp"
        android:text="@string/add_book_button"
        android:textColor="@color/light_pink" />

</LinearLayout>